--- a/banquetBuddy/catering_particular/templates/book_edit.html
+++ b/banquetBuddy/catering_particular/templates/book_edit.html
@@ -6,6 +6,11 @@
 <div class="container mt-4">
     <h1 class="card-title">Edit Event: {{ event.name }}</h1>
     <p class="card-title">Catering company: {{ event.cateringcompany.name }}</p>
+
+    <!-- Mensaje de alerta -->
+    <div class="alert alert-warning" role="alert">
+        You can only change the date of the event. If you want to change the number of guests or the menu, you must cancel the event and create a new one.
+    </div>
     <form method="post" action="/my_books/{{ event.id }}/edit" id="bookingEditForm">
         {% csrf_token %}
 
@@ -20,82 +25,34 @@
         </div>
 
         <div class="form-group">
-            <label for="number_guests">Number of Guests:</label>
-            <input type="number" name="number_guests" class="form-control" value="{{ event.number_guests }}" required>
+            <label>Number of Guests:</label>
+            <input type="number" name="number_guests" class="form-control" value="{{ event.number_guests }}" required readonly>
         </div>
 
+        <!-- Solo mostrar la tarjeta del menú seleccionado -->
         <div class="form-group">
-            <label for="menu">Select Menu:</label>
+            <label for="menu">Selected Menu:</label>
             <div class="row">
-                {% for menu in menus %}
-                <div class="col-md-4 mb-4">
-                  <div class="card h-100 d-flex flex-column shadow-sm custom-card-bg">
-                    <div class="card-body flex-fill d-flex flex-column">
-                      <h4 class="card-title">{{ menu.name }}</h4>
-                      <p class="card-text">{{ menu.description }}</p>
-                      <h5 class="card-subtitle mb-2 text-muted">Plates:</h5>
-                        <ul>
-                            {% for plate in menus_with_plates.items %}
-                                {% if plate.0 == menu %}
-                                    {% for p in plate.1 %}
-                                        <li>{{ p.name }}: <span class="text-muted">{{ p.description }}</span></li>
-                                    {% endfor %}
-                                {% endif %}
-                            {% endfor %}
-                        </ul>
-                      <div class="mt-auto">
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-add select-menu"
-                            data-menu-id="{{ menu.id }}">Select</button>
+                <div class="col-md-12 mb-4">
+                    <div class="card h-100 d-flex flex-column shadow-sm custom-card-bg">
+                        <div class="card-body flex-fill d-flex flex-column">
+                            <h4 class="card-title">{{ event.menu.name }}</h4>
+                            <p class="card-text">{{ event.menu.description }}</p>
+                            <h5 class="card-subtitle mb-2 text-muted">Plates:</h5>
+                            <ul>
+                                {% for plate in event.menu.plates.all %}
+                                    <li>{{ plate.name }}: <span class="text-muted">{{ plate.description }}</span></li>
+                                {% endfor %}
+                            </ul>
                         </div>
-                      </div>
                     </div>
-                  </div>
                 </div>
-                {% endfor %}
-                <input type="hidden" name="selected_menu" id="selected_menu">
             </div>
-            </br>
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-custom" form="bookingEditForm">Save Changes</button>
+            <button type="submit" class="btn btn-custom mb-4" form="bookingEditForm">Save Changes</button>
         </div>
-        <p></p>
     </form>
 </div>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-      const selectButtons = document.querySelectorAll('.select-menu');
 
-      selectButtons.forEach(button => {
-          button.addEventListener('click', function () {
-              const menuId = this.getAttribute('data-menu-id');
-              document.getElementById('selected_menu').value = menuId;
-          });
-      });
-  });
-  document.addEventListener('DOMContentLoaded', function () {
-    const selectButtons = document.querySelectorAll('.select-menu');
-
-    selectButtons.forEach(button => {
-        button.addEventListener('click', function () {
-            // Remover la clase 'btn-selected' de todos los botones
-            selectButtons.forEach(btn => btn.classList.remove('btn-select'));
-
-            // Agregar la clase 'btn-selected' al botón seleccionado
-            this.classList.add('btn-select');
-
-            const menuId = this.getAttribute('data-menu-id');
-            document.getElementById('selected_menu').value = menuId;
-        });
-    });
-});
-</script>
-<style>
-    .btn-select {
-        background-color: #02483E;
-        border-color: #02483E;
-        color: #ffffff;
-    }
-</style>
 {% endblock %}
