--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -88,17 +88,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/subscription-plans">Plan</a>
                     </li>
+                    {% elif request.user.is_authenticated and request.user.ParticularUsername %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/subscription-plans">Plan</a>
+                    </li>
                     {% endif %}
                     {% if request.user.is_authenticated and request.user.ParticularUsername %}
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="/caterings">Caterings</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/caterings">Caterings</a>
+                    </li>
                     {% endif %}
 
                     {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Management
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -125,12 +130,12 @@
                     {% endif %}
 
                     {% if request.user.is_authenticated and request.user.ParticularUsername %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'my_books' %}">My Bookings</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'listar_caterings_companies' %}">Chats</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'my_books' %}">My Bookings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'listar_caterings_companies' %}">Chats</a>
+                    </li>
                     {% endif %}
                     {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
                     <li class="nav-item">
