--- a/banquetBuddy/catering_owners/templates/catering_calendar_home.html
+++ b/banquetBuddy/catering_owners/templates/catering_calendar_home.html
@@ -34,14 +34,11 @@
         .form-container button:hover {
             background-color: #01352e;
         }
-        @media screen and (max-width: 450px) {
-            h2 {
-                font-size: 25px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-            }
-        }
-        @media screen and (max-width: 600px) and (min-width: 451px) {
-            h2 {
-                font-size: 30px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+
+        @media (max-width: 767px) {
+            .form-container {
+                margin-left: 20px;
+                margin-right: 20px;
             }
         }
     </style>
