--- a/banquetBuddy/catering_owners/templates/create_catering_service.html
+++ b/banquetBuddy/catering_owners/templates/create_catering_service.html
@@ -16,7 +16,7 @@ input[type="text"], textarea {
         <div class="col-md-6">
             <form method="post" enctype="multipart/form-data" action="{% url 'create_service' %}">
                 <div class="card" style="background-color: #02483e">
-                    <h2 class="mt-4 mb-3 text-white text-center">Create Service</h2>
+                    <h2 class="mt-4 mb-3 text-white text-center">Create New Service</h2>
                     <div class="container">
                         {% csrf_token %}
                         <div class="form-group text-white">
