--- a/banquetBuddy/catering_owners/templates/particular_books.html
+++ b/banquetBuddy/catering_owners/templates/particular_books.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a href="{% url 'catering_books_cancel' event.id %}" class="btn btn-danger">Confirm cancellation</a>
+                    <a href="{% url 'catering_books_cancel' event.id %}" class="btn btn-danger">Confirm Cancellation</a>
                 </div>
             </div>
         </div>
