--- a/banquetBuddy/core/templates/core/contact.html
+++ b/banquetBuddy/core/templates/core/contact.html
@@ -46,6 +46,12 @@
             max-width: 55%;
             height: auto;
         }
+
+        @media (max-width: 767px) {
+            .contact-info .image {
+                margin-bottom: 20px;
+            }
+        }
     </style>
 
     <div class="jumbotron text-center" style="background-color: #02483E; color: #fff;">
