--- a/banquetBuddy/core/templates/core/faq.html
+++ b/banquetBuddy/core/templates/core/faq.html
@@ -25,6 +25,13 @@
   .faq-item.open .faq-answer {
     display: block;
   }
+
+  @media (max-width: 767px) {
+    .faq-container {
+      max-width: 375px;
+      margin: 0 auto;
+    }
+  }
 </style>
 
     <div class="jumbotron text-center" style="background-color: #02483E; color: #fff;">
