--- a/banquetBuddy/core/templates/core/previous_terms.html
+++ b/banquetBuddy/core/templates/core/previous_terms.html
@@ -7,4 +7,12 @@
         <li><a href="{% url 'terms_version1_0' %}" style="color: #54bfaf; font-weight: bold;"> Version 1.0 - Effective 26/03/2024 - 08/04/2024 </a></li>
     </ul>
 </div>
+
+<style>
+    @media (max-width: 767px) {
+        h2 {
+            font-size: 25px;
+        }
+    }
+</style>
 {% endblock %}
