--- a/banquetBuddy/core/templates/core/profile.html
+++ b/banquetBuddy/core/templates/core/profile.html
@@ -51,7 +51,7 @@
         <div class="col-md-6">
           <div class="card" style="background-color: #02483e">
             <div class="card-body">
-              <h2 class="card-title text-center text-white">Company data</h2>
+              <h2 class="card-title text-center text-white">Company Data</h2>
               <ul class="list-group list-group-flush rounded">
                 <li class="list-group-item">
                   <strong>Company name:</strong> {{ catering_company.name }}
