--- a/banquetBuddy/catering_employees/templates/application_employee_list.html
+++ b/banquetBuddy/catering_employees/templates/application_employee_list.html
@@ -3,16 +3,11 @@
 
 {% block content %}
 <style>
-    body {
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        color: #02483E;
-    }
     .table-container {
         overflow-x: auto;
         max-width: 1000px;
         margin: 20px auto;
+        text-align: center;
     }
     table {
         width: 100%;
@@ -32,11 +27,25 @@
         background-color: #02483E;
         color: #ffffff;
     }
+    td {
+        color: #02483E;
+    }
     tr:nth-child(even) {
         background-color: #ffffff;
     }
     tr:hover {
         background-color: #e2e2e2;
+    }
+
+    @media (max-width: 767px) {
+        .table-container {
+            max-width: 375px;
+        }
+
+        th, td {
+            padding: 5px;
+            font-size: 0.9em;
+        }
     }
 </style>
 
