--- a/banquetBuddy/catering_employees/templates/employee_offer_list.html
+++ b/banquetBuddy/catering_employees/templates/employee_offer_list.html
@@ -42,8 +42,11 @@
     .button-appearance:hover {
         background-color: #01352e;
     }
-    hr {
-        margin-top: 3%;
+
+    @media (max-width: 767px) {
+        .offer {
+            margin-top: 11%;
+        }
     }
 </style>
 
@@ -86,7 +89,6 @@
             {% endif %}
         {% endfor %}
 
-        <hr></hr>
     {% elif search %}
         <div class="alert alert-info mt-4" role="alert">
             No se encontraron ofertas con el nombre "{{ search }}".
