--- a/banquetBuddy/catering_employees/templates/my_recommendation_letters.html
+++ b/banquetBuddy/catering_employees/templates/my_recommendation_letters.html
@@ -1,13 +1,18 @@
 {% extends 'core/base.html' %}
 {% load static %} 
 {% block content %}
+
+<style>
+    @media (max-width: 767px) {
+        h2 {
+            font-size: 37px;
+        }
+    }
+</style>
 <div class="container mt-4">
     <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
         Your Recommendations</h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% if not recomendation_dict %}
-            <h5 style="margin-left: 3%;">You have no recommendations yet</h5>
-        {% endif %}
         {% for recommendation, catering_company in recommendation_dict.items %}
         <div class="col mb-4">
             <div class="card h-100 shadow-sm">
@@ -17,6 +22,10 @@
                     <div class="text-muted mt-auto">{{ recommendation.date }}</div>
                 </div>
             </div>
+        </div>
+        {% empty %}
+        <div class="col">
+            <p class="mb-4 text-center small-font" style="color: #02483E; font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">You have no recommendations yet</p>
         </div>
         {% endfor %}
     </div>
