--- a/banquetBuddy/catering_owners/templates/manage_tasks.html
+++ b/banquetBuddy/catering_owners/templates/manage_tasks.html
@@ -5,25 +5,25 @@
 <style>
     /* Estilos generales para el tablero Kanban */
     .kanban-board {
-        display: flex;
         justify-content: space-around;
         padding: 20px;
     }
 
     /* Estilos para cada columna del Kanban */
     .kanban-column {
-        width: 30%;
+        width: 100%;
         min-height: 300px;
         background-color: #f4f4f4;
         margin: 0 10px;
         border-radius: 5px;
         padding: 10px;
         box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        flex: 1;
     }
 
-    .kanban-column h2 {
+    .kanban-column h3 {
         text-align: center;
-        color: #333;
+        color: #02483E;
     }
 
     /* Estilos para las tareas dentro de las columnas */
@@ -67,13 +67,36 @@
     .priority-low { background-color: #ccffcc; } /* Verde claro para baja prioridad */
     .priority-medium { background-color: #ffff99; } /* Amarillo para media prioridad */
     .priority-high { background-color: #ffcccc; } /* Rojo claro para alta prioridad */
+
+    @media (max-width: 767px) {
+        h2 {
+            font-size: 35px;
+        }
+
+        h3 {
+            font-size: 20px;
+        }
+
+        .kanban-board {
+            margin-right: 20px;
+        }
+
+        .kanban-column {
+            width: 100%;
+            flex: none;
+        }
+    }
 </style>
 
 
 
 {% if messages %}
 {% for message in messages %}
+{% if message.tags == 'success' %}
+<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+{% else %}
 <div class="alert alert-danger" role="alert">{{ message }}</div>
+{% endif %}
 {% endfor %}
 {% endif %}
 
@@ -81,116 +104,118 @@
     Manage Tasks for {{ event.name }}</h2>
 
 <div class="kanban-board">
-    <div class="kanban-column pending" data-state="PENDING">
-        <h2 style="color: #02483E;">Pending</h2>
-        <div class="tasks">
-            {% for task in tasks %}
-            {% if task.assignment_state == 'PENDING' %}
-            <div class="task" draggable="true" data-task-id="{{ task.id }}">
-                <p>{{ task.description }}</p>
-                <div class="task-details">
-                    Assigned to: 
-                    {% with employees=task.employees.all %}
-                        {% if employees %}
-                            {% for employee in employees %}
-                                {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
-                            {% endfor %}
-                        {% else %}
-                            Not assigned
-                        {% endif %}
-                    {% endwith %}
-                    <br>
-                                Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
-                    Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
-                    Due: {{ task.expiration_date|date:"Y-m-d" }}
+    <div class="row">
+        <div class="kanban-column pending col-md-4 mb-4" data-state="PENDING">
+            <h3>Pending</h3>
+            <div class="tasks">
+                {% for task in tasks %}
+                {% if task.assignment_state == 'PENDING' %}
+                <div class="task" draggable="true" data-task-id="{{ task.id }}">
+                    <p>{{ task.description }}</p>
+                    <div class="task-details">
+                        Assigned to: 
+                        {% with employees=task.employees.all %}
+                            {% if employees %}
+                                {% for employee in employees %}
+                                    {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                Not assigned
+                            {% endif %}
+                        {% endwith %}
+                        <br>
+                                    Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
+                        Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
+                        Due: {{ task.expiration_date|date:"Y-m-d" }}
+                    </div>
+    
+                    <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
+    
+                    <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
+                    </form>
+                    
                 </div>
-
-                <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
-
-                <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
-                </form>
-                
+                {% endif %}
+                {% endfor %}
             </div>
-            {% endif %}
-            {% endfor %}
         </div>
-    </div>
-    <div class="kanban-column in_progress" data-state="IN_PROGRESS">
-        <h2 style="color: #02483E;">In Progress</h2>
-        <div class="tasks">
-            {% for task in tasks %}
-            {% if task.assignment_state == 'IN_PROGRESS' %}
-            <div class="task" draggable="true" data-task-id="{{ task.id }}">
-                <p>{{ task.description }}</p>
-                <div class="task-details">
-                    Assigned to: 
-                    {% with employees=task.employees.all %}
-                        {% if employees %}
-                            {% for employee in employees %}
-                                {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
-                            {% endfor %}
-                        {% else %}
-                            Not assigned
-                        {% endif %}
-                    {% endwith %}
-                    <br> 
-                        Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
-                    Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
-                    Due: {{ task.expiration_date|date:"Y-m-d" }}
+        <div class="kanban-column in_progress col-md-4 mb-4" data-state="IN_PROGRESS">
+            <h3>In Progress</h3>
+            <div class="tasks">
+                {% for task in tasks %}
+                {% if task.assignment_state == 'IN_PROGRESS' %}
+                <div class="task" draggable="true" data-task-id="{{ task.id }}">
+                    <p>{{ task.description }}</p>
+                    <div class="task-details">
+                        Assigned to: 
+                        {% with employees=task.employees.all %}
+                            {% if employees %}
+                                {% for employee in employees %}
+                                    {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                Not assigned
+                            {% endif %}
+                        {% endwith %}
+                        <br> 
+                            Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
+                        Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
+                        Due: {{ task.expiration_date|date:"Y-m-d" }}
+                    </div>
+    
+                    <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
+            
+    
+                    <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
+                    </form>
+                    
+                    
                 </div>
-
-                <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
-        
-
-                <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
-                </form>
-                
-                
+                {% endif %}
+                {% endfor %}
             </div>
-            {% endif %}
-            {% endfor %}
         </div>
-    </div>
-    <div class="kanban-column completed" data-state="COMPLETED">
-        <h2 style="color: #02483E;">Completed</h2>
-        <div class="tasks">
-            {% for task in tasks %}
-            {% if task.assignment_state == 'COMPLETED' %}
-            <div class="task" draggable="true" data-task-id="{{ task.id }}">
-                <p>{{ task.description }}</p>
-                <div class="task-details">
-                    Assigned to: 
-                    {% with employees=task.employees.all %}
-                        {% if employees %}
-                            {% for employee in employees %}
-                                {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
-                            {% endfor %}
-                        {% else %}
-                            Not assigned
-                        {% endif %}
-                    {% endwith %}
-                    <br>
-                                        Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
-                    Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
-                    Due: {{ task.expiration_date|date:"Y-m-d" }}
+        <div class="kanban-column completed col-md-4 mb-4" data-state="COMPLETED">
+            <h3>Completed</h3>
+            <div class="tasks">
+                {% for task in tasks %}
+                {% if task.assignment_state == 'COMPLETED' %}
+                <div class="task" draggable="true" data-task-id="{{ task.id }}">
+                    <p>{{ task.description }}</p>
+                    <div class="task-details">
+                        Assigned to: 
+                        {% with employees=task.employees.all %}
+                            {% if employees %}
+                                {% for employee in employees %}
+                                    {{ employee.user.username }}{% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                Not assigned
+                            {% endif %}
+                        {% endwith %}
+                        <br>
+                                            Priority: <span class="priority-{{ task.priority|lower }}">{{ task.priority }}</span><br>
+                        Start: {{ task.assignment_date|date:"Y-m-d" }}<br>
+                        Due: {{ task.expiration_date|date:"Y-m-d" }}
+                    </div>
+    
+                    <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
+            
+    
+                    <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
+                    </form>
+                   
+                    
                 </div>
-
-                <button type="button" class="btn btn-edit btn-sm" onclick="loadTaskData({{ task.id }})">Edit Task</button>
-        
-
-                <form method="post" action="{% url 'delete_task' task.id %}" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this task?');">Delete Task</button>
-                </form>
-               
-                
+                {% endif %}
+                {% endfor %}
             </div>
-            {% endif %}
-            {% endfor %}
         </div>
     </div>
 </div>
