--- a/banquetBuddy/catering_owners/templates/offers/create_offer.html
+++ b/banquetBuddy/catering_owners/templates/offers/create_offer.html
@@ -21,7 +21,7 @@
         <div class="col-md-6">
             <form method="post" enctype="multipart/form-data" action="{% url 'create_offer' %}">
                 <div class="card" style="background-color: #02483e">
-                    <h2 class="mt-4 mb-3 text-white text-center">Create New Job Offer</h2>
+                    <h2 class="mt-4 mb-3 text-white text-center">Create New Offer</h2>
                     <div class="container">
                         {% csrf_token %}
                         <div class="form-group text-white">
