--- a/banquetBuddy/catering_owners/templates/recommendation_letter.html
+++ b/banquetBuddy/catering_owners/templates/recommendation_letter.html
@@ -2,6 +2,14 @@
 {% load static %}
 
 {% block content %}
+
+<style>
+    @media (max-width: 767px) {
+        h2 {
+            font-size: 25px;
+        }
+    }
+</style>
 <div class="container mt-4">
     <h2 class="mb-4" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
         New Recommendation for {{ employee.user.username }}</h2>
@@ -20,6 +28,7 @@
 
         <button type="submit" class="btn btn-custom">Confirm Letter</button>
     </form>
+    <br>
 </div>
 
 {% endblock %}
