--- a/banquetBuddy/catering_owners/templates/reservations_for_day.html
+++ b/banquetBuddy/catering_owners/templates/reservations_for_day.html
@@ -2,11 +2,6 @@
 
 {% block content %}
 <style>
-    body {
-        text-align: center;
-        margin: 0;
-        padding: 0;
-    }
     .custom-card {
         border: 1px solid #02483E;
         border-radius: 0.5rem;
@@ -23,32 +18,18 @@
         margin-left: 15px;
         margin-right: 15px;
     }
-    @media screen and (max-width: 600px) and (min-width: 451px) {
-            h2 {
-                font-size: 30px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-            }
-    }
-    @media screen and (max-width: 450px) {
-            h2 {
-                font-size: 24px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-            }
-    }
-    @media screen and (max-width: 600px) and (min-width: 451px) {
-            p {
-                font-size: 15px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-            }
-    }
-    @media screen and (max-width: 450px) {
-            p {
-                font-size: 12.5px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-            }
-    }
     .field-name {
       color: #02483E;
       font-weight: bold;
     }
     .field-value {
         margin-left: 20px;
+    }
+
+    @media (max-width: 767px) {
+        h2 {
+            font-size: 40px;
+        }
     }
 </style>
 
