--- a/banquetBuddy/catering_owners/templates/view_reservation.html
+++ b/banquetBuddy/catering_owners/templates/view_reservation.html
@@ -2,72 +2,44 @@
 {% load static %}
 
 {% block content %}
-    <style>
-        .content-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            margin: 0;
-        }
-        .content-container {
-            max-width: 600px;
-            width: 100%;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 30px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        li strong {
-            margin-right: 5px;
-            color: #02483E;
-        }
-        @media screen and (max-width: 600px) and (min-width: 451px) {
-          h2 {
-              font-size: 30px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-          }
-        }
-        @media screen and (max-width: 450px) {
-          h2 {
-              font-size: 24px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-          }
-        }
-        @media screen and (max-width: 600px) and (min-width: 451px) {
-          li {
-              font-size: 15px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-          }
-        }
-        @media screen and (max-width: 450px) {
-          li {
-              font-size: 13px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-          }
-        }
-    </style>
-<body>
+<style>
+    .content-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        margin: 0;
+    }
+
+    .content-container {
+        max-width: 600px;
+        width: 100%;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin-top: 30px;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+</style>
 
 <div class="content-wrapper">
     <div class="content-container">
         <h2 class="mb-4 text-center" style="color: #02483E; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
             Booking Details</h2>
         <ul>
-            <li><strong>Name:</strong> {{ event.name }}</li>
-            <li><strong>Date:</strong> {{ event.date }}</li>
-            <li><strong>Details:</strong> {{ event.details }}</li>
-            <li><strong>Number of Guests:</strong> {{ event.number_guests }}</li>
-            <li><strong>Booking State:</strong> {{ event.booking_state }}</li>
-            <li><strong>Particular:</strong> {{ event.particular.user.email}}</li>
+            <li style="margin-bottom: 10px;"><strong style="margin-right: 5px; color: #02483E;">Name:</strong> {{ event.name }}</li>
+            <li style="margin-bottom: 10px;"><strong style="margin-right: 5px; color: #02483E;">Date:</strong> {{ event.date }}</li>
+            <li style="margin-bottom: 10px;"><strong style="margin-right: 5px; color: #02483E;">Details:</strong> {{ event.details }}</li>
+            <li style="margin-bottom: 10px;"><strong style="margin-right: 5px; color: #02483E;">Number of Guests:</strong> {{ event.number_guests }}</li>
+            <li style="margin-bottom: 10px;"><strong style="margin-right: 5px; color: #02483E;">Booking State:</strong> {{ event.booking_state }}</li>
+            <li style="margin-bottom: 10px;"><strong style="margin-right: 5px; color: #02483E;">Particular:</strong> {{ event.particular.user.email}}</li>
         </ul>
     </div>
 </div>
-
-</body>
 {% endblock %}
