--- a/banquetBuddy/catering_particular/templates/listar_caterings.html
+++ b/banquetBuddy/catering_particular/templates/listar_caterings.html
@@ -11,6 +11,12 @@
     height: auto; /* Ajusta el tamaño según sea necesario */
     max-height: 65px;
   }
+
+  @media (max-width: 767px) {
+    h2 {
+      font-size: 40px;
+    }
+  }
 </style>
 <div class="container mt-4">
   <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
