--- a/banquetBuddy/core/templates/core/home.html
+++ b/banquetBuddy/core/templates/core/home.html
@@ -94,7 +94,7 @@
     Discover Us</h3>
 </div>
 <div class="col-12 mt-4 d-flex justify-content-center">
-  <div class="video-frame">
+  <div class="video-frame text-center">
     <iframe width="900" height="500" src="https://www.youtube.com/embed/1dQrD2Y8fVo" allowfullscreen></iframe>
   </div>
 </div>
@@ -123,18 +123,28 @@
     if (event.clientX !== undefined) {
       speed = Math.abs(event.clientX - lastMouseX);
       lastMouseX = event.clientX;
+      
+      logo.style.transitionDuration = "0s";
+      logo.style.transform = "rotateY(" + speed * 2 + "deg)";
+
+      logo.addEventListener("mouseleave", function (event) {
+        logo.style.transitionDuration = "0.3s";
+        logo.style.transform = "rotateY(0deg)";
+      });
+
     } else if (event.touches[0].clientX !== undefined) {
       speed = Math.abs(event.touches[0].clientX - lastTouchX);
       lastTouchX = event.touches[0].clientX;
+      
+      logo.style.transitionDuration = "0s";
+      logo.style.transform = "rotateY(" + speed * 2 + "deg)";
+      
+      logo.addEventListener("touchleave", function (event) {
+        logo.style.transitionDuration = "0.3s";
+        logo.style.transform = "rotateY(0deg)";
+      });
     }
-    logo.style.transitionDuration = "0s";
-    logo.style.transform = "rotateY(" + speed * 2 + "deg)";
   }
-
-  logo.addEventListener("mouseleave", function (event) {
-    logo.style.transitionDuration = "0.3s";
-    logo.style.transform = "rotateY(0deg)";
-  });
 
   logo.addEventListener("mousemove", rotateLogo);
   logo.addEventListener("touchmove", rotateLogo);
@@ -167,9 +177,14 @@
   }
   
   @media (max-width: 767px) {
+    .video-frame {
+      margin: 0 auto;
+      max-width: 100%;
+    }
+    
     .video-frame iframe {
-      width: 450px;
-      height: 300px;
+      width: 100%;
+      height: auto;
     }
   }
 </style>
