--- a/banquetBuddy/core/templates/core/reset_password.html
+++ b/banquetBuddy/core/templates/core/reset_password.html
@@ -57,6 +57,13 @@
     .btn:hover {
         background-color: #01352e;
     }
+
+    @media (max-width: 767px) {
+        .login-form-container {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+    }
 </style>
 <body>
 
