test:visual tests added

--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -209,7 +209,7 @@
             </div>
             {% if price_plan == "PREMIUM" %}
             <div class="plan-btn" style="margin-top:20%;">
-                <button type="button" class="btn btn-danger">
+                <button type="button" class="btn btn-danger" name="cancel_subscription_premium">
                     <a href="{% url 'catering_unsuscribe' %}" class="text-decoration-none text-light">
                         <span class="btn-text">Cancel subscription</span>
                     </a>
