--- a/banquetBuddy/catering_owners/templates/list_employee.html
+++ b/banquetBuddy/catering_owners/templates/list_employee.html
@@ -83,23 +83,24 @@
         <nav aria-label="Employee pagination">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page=1"><<</a></li>
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"><</a></li>
+                    <li class="page-item"><a class="page-link" href="?page=1&status={{ request.GET.status }}"><<</a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}&status={{ request.GET.status }}"><</a></li>
                 {% endif %}
-
+            
                 {% for num in page_obj.paginator.page_range %}
-                {% if page_obj.number == num %}
-                <li class="page-item active"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
-                {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
-                {% endif %}
+                    {% if page_obj.number == num %}
+                        <li class="page-item active"><a class="page-link" href="?page={{ num }}&status={{ request.GET.status }}">{{ num }}</a></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ num }}&status={{ request.GET.status }}">{{ num }}</a></li>
+                    {% endif %}
                 {% endfor %}
-
+            
                 {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">></a></li>
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">>></a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}&status={{ request.GET.status }}">></a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&status={{ request.GET.status }}">>></a></li>
                 {% endif %}
             </ul>
+            
         </nav>
     </div>
 {% endblock %}
